Fix broken CSS for table

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -49,7 +49,7 @@
     --grvsc-border-radius: 10px;
     --grvsc-padding-top: 2rem;
     --grvsc-padding-bottom: 0rem;
-    --dark-button-scale: 0.7;
+    --dark-button-scale: 0.5;
 }
 
 
